--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,20 @@
+version 1.1
+- improved sampling (now very fast for large datasets!). Arguments sample and sampleBinSize are added.
+- added comparison tableplots (see ?"-.tabplot")
+
+version 1.0-1
+- fixed bug when nBins > number of rows
+
+version 1.0
+- fast preprocessing with ffbase, which uses C code
+- tick marks applied on x-ases for numeric variables 
+- flexilibity to plot high cardinality categorical variables
+- fixed a bug: if nBins was an integer the tableplot function reported that it was not numeric (thanks to Gabor Grothendieck).
+- updated vignette
+- added shiny interface 
+
 version 0.12-1
 - fixed bug with one-level-factors
-- fixed a bug: if nBins was an integer the tableplot function reported that it was not numeric (thanks to Gabor Grothendieck).
 
 version 0.12
 - added more flexibility to select columns and to subset the data. The new argument select allows both column indices and expressions while the new argument select_string allows character strings. The new argument subset allows logical expressions to indicate which rows to select, while subset_string allows character strings. The subset(_string) can also be used to select a categorical variable to split the data.
